--- a/updown/src/main/AndroidManifest.xml
+++ b/updown/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lucky.cat.updown">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.lucky.cat.updown">
 
-    <application
-        android:allowBackup="true"
-        android:label="@string/app_name"
+    <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
 
     </application>
